--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="banner" id="banner">
 
     <div class="content">
-        <h3><b>Top 5 best metaverse projects for 2022</b></h3>
+        <h3><b>Top 5  metaverse projects for 2022</b></h3>
         </div>
 
 </section>
